// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfirmationDialogComponent should close the dialog and send cancel response 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <dialog
    class="my-dialog"
  >
    <app-dialog-layout
      class="w-80 md:w-96 block"
    >
      <section
        class="flex flex-col p-4 md:p-10 shadow-md bg-white space-y-4"
      >
        <div
          class="flex flex-row justify-between"
        >
          <h2>
             tit 
          </h2>
          <app-button
            close=""
          >
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <mat-icon
                aria-hidden="true"
                class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                data-mat-icon-type="font"
                role="img"
              >
                add
              </mat-icon>
              <!--container-->
            </button>
          </app-button>
        </div>
        <div
          class="space-y-4"
        >
          <p>
            confirm
          </p>
        </div>
        <div
          class="ml-auto join"
        >
          <app-button>
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <!--container-->
            </button>
          </app-button>
          <app-button>
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <!--container-->
            </button>
          </app-button>
        </div>
      </section>
    </app-dialog-layout>
  </dialog>
  <!--container-->
</div>
`;

exports[`ConfirmationDialogComponent should close the dialog and send submit response 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <dialog
    class="my-dialog"
  >
    <app-dialog-layout
      class="w-80 md:w-96 block"
    >
      <section
        class="flex flex-col p-4 md:p-10 shadow-md bg-white space-y-4"
      >
        <div
          class="flex flex-row justify-between"
        >
          <h2>
             tit 
          </h2>
          <app-button
            close=""
          >
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <mat-icon
                aria-hidden="true"
                class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                data-mat-icon-type="font"
                role="img"
              >
                add
              </mat-icon>
              <!--container-->
            </button>
          </app-button>
        </div>
        <div
          class="space-y-4"
        >
          <p>
            confirm
          </p>
        </div>
        <div
          class="ml-auto join"
        >
          <app-button>
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <!--container-->
            </button>
          </app-button>
          <app-button>
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <!--container-->
            </button>
          </app-button>
        </div>
      </section>
    </app-dialog-layout>
  </dialog>
  <!--container-->
</div>
`;

exports[`ConfirmationDialogComponent should render the template correctly  1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <dialog
    class="my-dialog"
  >
    <app-dialog-layout
      class="w-80 md:w-96 block"
    >
      <section
        class="flex flex-col p-4 md:p-10 shadow-md bg-white space-y-4"
      >
        <div
          class="flex flex-row justify-between"
        >
          <h2>
             tit 
          </h2>
          <app-button
            close=""
          >
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <mat-icon
                aria-hidden="true"
                class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                data-mat-icon-type="font"
                role="img"
              >
                add
              </mat-icon>
              <!--container-->
            </button>
          </app-button>
        </div>
        <div
          class="space-y-4"
        >
          <p>
            confirm
          </p>
        </div>
        <div
          class="ml-auto join"
        >
          <app-button>
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <!--container-->
            </button>
          </app-button>
          <app-button>
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <!--container-->
            </button>
          </app-button>
        </div>
      </section>
    </app-dialog-layout>
  </dialog>
  <!--container-->
</div>
`;

exports[`ConfirmationDialogComponent should render the template correctly if the dialog is opened 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <dialog
    class="my-dialog"
    open=""
  >
    <app-dialog-layout
      class="w-80 md:w-96 block"
    >
      <section
        class="flex flex-col p-4 md:p-10 shadow-md bg-white space-y-4"
      >
        <div
          class="flex flex-row justify-between"
        >
          <h2>
             tit 
          </h2>
          <app-button
            close=""
          >
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <mat-icon
                aria-hidden="true"
                class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                data-mat-icon-type="font"
                role="img"
              >
                add
              </mat-icon>
              <!--container-->
            </button>
          </app-button>
        </div>
        <div
          class="space-y-4"
        >
          <p>
            confirm
          </p>
        </div>
        <div
          class="ml-auto join"
        >
          <app-button>
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <!--container-->
            </button>
          </app-button>
          <app-button>
            <button
              class="btn flex flex-row justify-center btn-primary"
            >
              <!--container-->
            </button>
          </app-button>
        </div>
      </section>
    </app-dialog-layout>
  </dialog>
  <!--container-->
</div>
`;
